[package]
name = "ironcat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bitflags = "2.6.0"
byteorder = "1.5.0"
dashmap = "6.1.0"
log = "0.4.22"
rand = "0.8.5"
ratatui = "0.28.1"
sha2 = "0.10.8"
simplelog = { version = "0.12.2", features = ["paris"] }
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
